--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-redux-simple-jwt",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A dead simple Redux-Middleware for JWT Authentication in React applications",
   "author": "Abhi Chaurasia",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
